tests/baselines/reference/es5DateAPIs.errors.txt
es5DateAPIs.ts(1,6): error TS2554: Expected 2-7 arguments, but got 1.


==== es5DateAPIs.ts (1 errors) ====
    Date.UTC(2017); // should error
         ~~~
!!! error TS2554: Expected 2-7 arguments, but got 1.
!!! related TS6210 lib.es5.d.ts:--:--: An argument for 'monthIndex' was not provided.